remove useless code